chore: documents current handlers on the API
